2000-06-20  James Henstridge  <james@daa.com.au>

	* examples/...: updated a few examples.

	* gtk/__init__.py: import ltihooks here, so I don't have to
	explicitely import it when testing out examples.  The import can
	probably go once I start installing the new pygtk.

	* codegen/mkskel.py (write_skels): a short script to generate
	some skeletons to help people start writing their extension.

	* gtk/gtk.override: implementation of GtkWidget.selection_add_targets.

2000-06-19  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override: ignore some more internal functions.

	* gtk/gtk.defs: removed the gtk_prefix on some functions.

	* gtk/gdk.defs: removed gdk_ prefix on some functions

	* gtk/gtk.override: add support for some unimplemented dnd functions.
	Ignore some internal dnd functions.

2000-06-18  James Henstridge  <james@daa.com.au>

	* examples/simple/hello1.py:
	* examples/simple/simple1.py:
	* examples/tooltip1.py: removed examples that were designed to work
	with old procedural API.

	* examples/simple/scribble.py (main): updated to work with new gtk.

	* gtk/gtkmodule.c (init_gtk): change names of some functions.

	* gtk/gtk.override: add a headers section to include the required
	header.

	* codegen/codegen.py (register_types): allow specifying the prefix
	for the type registration function and module functions array.
	Insert header and init code in generated code.

	* codegen/override.py (Overrides.get_init): add support for headers
	and init sections for the override file.  These get inserted at the
	top of the generated code and in the init function respectively.

2000-06-17  James Henstridge  <james@daa.com.au>

	* gtk/gtk.defs: fix up a few function names.

	* gtk/gtk.override: added some drawing and pixmap function
	implementations.

	* gtk/gdk.defs: updated some function names.

	* gtk/gtk.override: add a few more overrides for difficult functions.

2000-05-20  James Henstridge  <james@daa.com.au>
