@@ -9,3 +9,4 @@ Makefile.in
 *.pyc
 *.pyo
 gtk.c
+libglade.c
