@@ -1,0 +1,127 @@
+;; -*- scheme -*-
+; object definitions ...
+(object XML
+  (in-module Glade)
+  (parent Data (Gtk))
+  (c-name GladeXML)
+)
+
+;; Enumerations and flags ...
+
+
+;; From /usr/include/glade/glade-xml.h
+
+(function glade_xml_get_type
+  (c-name glade_xml_get_type)
+  (return-type GtkType)
+)
+
+(function glade_xml_new
+  (c-name glade_xml_new)
+  (return-type GladeXML*)
+  (parameter (type-and-name const-char* fname))
+  (parameter (type-and-name const-char* root))
+)
+
+(function glade_xml_new_with_domain
+  (c-name glade_xml_new_with_domain)
+  (is-constructor-of GladeXML)
+  (return-type GladeXML*)
+  (parameter (type-and-name const-char* fname))
+  (parameter (type-and-name const-char* root))
+  (parameter (type-and-name const-char* domain))
+)
+
+(function glade_xml_new_from_memory
+  (c-name glade_xml_new_from_memory)
+  (return-type GladeXML*)
+  (parameter (type-and-name char* buffer))
+  (parameter (type-and-name int size))
+  (parameter (type-and-name const-char* root))
+  (parameter (type-and-name const-char* domain))
+)
+
+(method construct
+  (of-object XML (Glade))
+  (c-name glade_xml_construct)
+  (return-type gboolean)
+  (parameter (type-and-name const-char* fname))
+  (parameter (type-and-name const-char* root))
+  (parameter (type-and-name const-char* domain))
+)
+
+(method signal_connect
+  (of-object XML (Glade))
+  (c-name glade_xml_signal_connect)
+  (return-type none)
+  (parameter (type-and-name const-char* handlername))
+  (parameter (type-and-name GtkSignalFunc func))
+)
+
+(method signal_connect_data
+  (of-object XML (Glade))
+  (c-name glade_xml_signal_connect_data)
+  (return-type none)
+  (parameter (type-and-name const-char* handlername))
+  (parameter (type-and-name GtkSignalFunc func))
+  (parameter (type-and-name gpointer user_data))
+)
+
+(method signal_autoconnect
+  (of-object XML (Glade))
+  (c-name glade_xml_signal_autoconnect)
+  (return-type none)
+)
+
+(method signal_connect_full
+  (of-object XML (Glade))
+  (c-name glade_xml_signal_connect_full)
+  (return-type none)
+  (parameter (type-and-name const-gchar* handler_name))
+  (parameter (type-and-name GladeXMLConnectFunc func))
+  (parameter (type-and-name gpointer user_data))
+)
+
+(method signal_autoconnect_full
+  (of-object XML (Glade))
+  (c-name glade_xml_signal_autoconnect_full)
+  (return-type none)
+  (parameter (type-and-name GladeXMLConnectFunc func))
+  (parameter (type-and-name gpointer user_data))
+)
+
+(method get_widget
+  (of-object XML (Glade))
+  (c-name glade_xml_get_widget)
+  (return-type GtkWidget*)
+  (parameter (type-and-name const-char* name))
+)
+
+(method get_widget_prefix
+  (of-object XML (Glade))
+  (c-name glade_xml_get_widget_prefix)
+  (return-type GList*)
+  (parameter (type-and-name const-char* name))
+)
+
+(method get_widget_by_long_name
+  (of-object XML (Glade))
+  (c-name glade_xml_get_widget_by_long_name)
+  (return-type GtkWidget*)
+  (parameter (type-and-name const-char* longname))
+)
+
+(method relative_file
+  (of-object XML (Glade))
+  (c-name glade_xml_relative_file)
+  (return-type gchar*)
+  (parameter (type-and-name const-gchar* filename))
+)
+
+(function glade_get_widget_tree
+  (c-name glade_get_widget_tree)
+  (return-type GladeXML*)
+  (parameter (type-and-name GtkWidget* widget))
+)
+
+
